--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,19 @@ width: 100vw;
 
 }
 
+div.header {
+background-color: rgb(15,37,58);
+color: rgb(255,255,255);
+
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display";
   letter-spacing: 5px;
   text-align: center;
 
 }
+
 img {
 
 display: flex;
