--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,17 +1,20 @@
-#home {background-color: black;
-        }
-h1     {color: white;
+body {
+      font-family: 'Source Code Pro', monospace;
+}
+
+.title  {color: white;
         font-size: 100px;
-        text-align: center;
-        padding: 20px;
+        padding-top: 250px;
         }
 
-#bio {color: black;
-      margin-left: 20px;
-}
+.bio    {color: white;
+        font-size: 30px;
+        padding-bottom: 30px;
+        }
 
 .row {margin-bottom: 20px
     }
+
 #restaurant1 {background-color: grey;
               padding: 10px
     }
@@ -39,6 +42,27 @@ h1     {color: white;
     }
 
 .social-logo {width: 100px;
+}
 
+body, html {
+  height: 100%;
+}
 
+.bg {
+  /* The image used */
+  background-image: url("bg_image2.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#navbar {
+  position: fixed;
+  top: 0px;
+  width: 100%;
 }
