--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -70,6 +70,19 @@ a {
     color: inherit;
 }
 
+.zoom {
+  padding: 0px;
+  background-color: yellow;
+  transition: transform .4s; /* Animation */
+  width: 450px;
+  height: 300px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
 #social-logo {display: flex;
               justify-content: space-around;
               align-content: center;
